--- a/modal_september.html
+++ b/modal_september.html
@@ -154,7 +154,7 @@
 </head>
 <body>
     <div class="header">
-        <h1> Laporan Modal TMS</h1>
+        <h1> Laporan Modal TMS September 2025</h1>
     </div>
 
     <div class="dashboard">
@@ -171,7 +171,7 @@
         </div>
 
         <!-- Atrium -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1vOixxjvetp0zmKtv0_M5kyxkbBTFybohTPsakH5yaeo/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">Atrium</div>
         </div>
@@ -183,25 +183,25 @@
         </div>
 
         <!-- PRJ -->
-         <div class="store-card" onclick="window.open('', '_blank')">
+         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/10H7EG51ViTImjZ9-oGFylHYDkpC0hHZrQJNZjJHoeiQ/edit?usp=sharing', '_blank')">
             <i class="fas fa-flag store-icon"></i>
             <div class="store-name">PRJ</div>
         </div>
 
         <!-- Cempaka Mas -->
-         <div class="store-card" onclick="window.open('', '_blank')">
+         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/10nuuE2SptRoyGfnVO3sK2btEF26MXyz9NSDMC1g9MIM/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">Cempaka Mas</div>
         </div>
 
         <!-- Roxy Mas -->
-         <div class="store-card" onclick="window.open('', '_blank')">
+         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/141CtlPw7xypy9XTJYVbyWEN-IgEvY9zgXRCBrFVyvRw/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">Roxy Mas</div>
         </div>
 
         <!-- Ruko Benhil -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1hOGWt9jDo3EIF0XwdaXJ3a7CM1392EymPNrLSOKAEPI/edit?usp=sharing', '_blank')">
             <i class="fas fa-building store-icon"></i>
             <div class="store-name">Ruko Benhil</div>
         </div>
@@ -213,13 +213,13 @@
         </div>
 
         <!-- Gajah Mada Plaza -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1kv2i3k0l3tilgPJMKM8WrqICnw87frLzUwdfHk0r3Jo/edit?usp=sharing', '_blank')">
             <i class="fas fa-store-alt store-icon"></i>
             <div class="store-name">Gajah Mada</div>
         </div>
 
         <!-- FX Sudirman -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1_jYp922xo-oAB8RuAXDeSenOnJYOFSlpkeFZRs8azag/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">FX Sudirman</div>
         </div>
@@ -231,43 +231,43 @@
         </div>
 
         <!-- Grand Indonesia -->
-       <div class="store-card" onclick="window.open('', '_blank')">
+       <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1c9e1ueAq3s4-dnzLPB48WW21UL3KO1d23SF3eFEx_dM/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">Grand Indonesia</div>
         </div>
 
         <!-- Menteng Huis -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1eXM52lL78t6HzVIgJOt0EhnTZnROVW2wj1Kq9oFz7jM/edit?usp=sharing', '_blank')">
             <i class="fas fa-home store-icon"></i>
             <div class="store-name">Menteng Huis</div>
         </div>
 
         <!-- Green Pramuka Square -->
-       <div class="store-card" onclick="window.open('', '_blank')">
+       <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1dPzbwv0TA975jiWzGmv3GwiC0uvEaN_mjtLd6DzWMQ4/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">Green Pramuka</div>
         </div>
 
         <!-- Cideng -->
-      <div class="store-card" onclick="window.open('', '_blank')">
+      <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1d-KfRQncwd8oxewAXWisaPfSQVIqhWP_s34C6O_PK5c/edit?usp=sharing', '_blank')">
             <i class="fas fa-street-view store-icon"></i>
             <div class="store-name">Cideng</div>
         </div>
 
         <!-- RS St Carolus -->
-         <div class="store-card" onclick="window.open('', '_blank')">
+         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1_Vm89YqfNC72n6xRPA0GXSFEq0PB2iiheZFk7fB0daE/edit?usp=sharing', '_blank')">
             <i class="fas fa-hospital store-icon"></i>
             <div class="store-name">RS St Carolus</div>
         </div>
 
         <!-- Transmart Cempaka -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1TjsWqhEpy-EBWLhY7tjCWBqWDVJfOQW8r4aPWkSMLCU/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-basket store-icon"></i>
             <div class="store-name">Transmart</div>
         </div>
 
         <!-- Ruko Pecenongan -->
-		 <div class="store-card" onclick="window.open('', '_blank')">
+		 <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1XRCdX_QCqb09M7LuPGZM7GQLwkv720FGZU4wTbg7iWk/edit?usp=sharing', '_blank')">
             <i class="fas fa-building store-icon"></i>
             <div class="store-name">Ruko Pecenongan</div>
         </div>
