--- a/modal_september.html
+++ b/modal_september.html
@@ -159,13 +159,13 @@
 
     <div class="dashboard">
         <!-- Sabang -->
-         <div class="store-card" onclick="window.open('', '_blank')">
+         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1EHjAqU5Rlem9tBIJIhhaKw_kJn1xlZC9JMrzFBtW4Uw/edit?usp=sharing', '_blank')">
             <i class="fas fa-street-view store-icon"></i>
             <div class="store-name">Sabang</div>
         </div>
 
         <!-- Gambir -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/197NPrKmUCGMFL1g-i6bROTO5c5oh2mFxB_yW3GutzRI/edit?usp=sharing', '_blank')">
             <i class="fas fa-train store-icon"></i>
             <div class="store-name">Gambir</div>
         </div>
@@ -207,7 +207,7 @@
         </div>
 
         <!-- Ruko Rawasari -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1bb7_jdrEEHAp0dZ6qUhk68_3OTPG0vAR4EBsGgAFdPU/edit?usp=sharing', '_blank')">
             <i class="fas fa-building store-icon"></i>
             <div class="store-name">Ruko Rawasari</div>
         </div>
