--- a/monthdoi.html
+++ b/monthdoi.html
@@ -177,7 +177,7 @@
         </a>
         
         <!-- September -->
-        <a href="september.html" class="month-card september">
+        <a href="https://docs.google.com/spreadsheets/d/1s0jadFeUUAr3amvHfboIRe4sLRx7ZFzoXretlhtgIpY/edit?usp=sharing" class="month-card september">
             <div class="month-icon">
                 <i class="fas fa-leaf"></i>
             </div>
