--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                     <div class="report-icon daily-9"><i class="fas fa-hand-holding-usd"></i></div>
                     <div class="report-title">Monitoring sales Reksa</div>
                 </a>
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/EcmTAP0UU_1Ar7CWstNJ3k8B1Q3MKH_tNebfeHc-NpNCmw?e=TfQ13l" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/ES28fNyEyFFHoaLBGtaKO-EBePNtOsv9R5q6rC4sgL5CDQ?e=U6MF8d" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
-                    <div class="report-title">DOI Operasional Pusat</div>
+                    <div class="report-title">DOI Operasional Pusat - September 2025</div>
                 </a>
                   <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/Ec6pDWpzCtBGjU0hAwGN3m4BLA1qXkIJAwoSI0hTUCVCUA?e=FYdU9o" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
