--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <div class="report-title">Monitoring Penjualan Promo</div>
                 </a>
 
-                <a href="https://docs.google.com/spreadsheets/d/1yeo3A8wPd7Q09J5d7YtrpFfGkbiQDcjyUrK-ZEgsYiw/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1X1MVFDsbp-H0hqrF0-N6jYxBpwyY-VXZ/edit?gid=1063202944#gid=1063202944/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-14"><i class="fas fa-users"></i></div>
                     <div class="report-title">Data Sistem Kerja Karyawan Area 2</div>
                 </a>
