--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         .monthly-4 { color: #e74c3c; }
         .monthly-5 { color: #9b59b6; }
         .monthly-6 { color: #f39c12; }
+        .monthly-7 { color: #d35400; }
         
         /* Project Report Colors */
         .project-1 { color: #9b59b6; }
@@ -259,11 +260,11 @@
                 </a>
                   <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/Ec6pDWpzCtBGjU0hAwGN3m4BLA1qXkIJAwoSI0hTUCVCUA?e=FYdU9o" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
-                    <div class="report-title">Rekap Keterisian Kursi dan Hujan 27 Ags-2 Sept 2025</div>
+                    <div class="report-title">Rekap Keterisian Kursi dan Hujan 2025</div>
                 </a>
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EYUZ0dUMczpIjYpM4DhtAAgBBSSUMkbBzRZ6mvuiC_GWvA?e=c2KE1p" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon 13"><i class="fas fa-sort-amount-desc"></i></div>
-                    <div class="report-title">Rekap Traffic Count 28 Ags - 03 Sept 2025</div>
+                    <div class="report-title">Rekap Traffic Count 2025</div>
                 </a>
             </div>
         </div>
@@ -321,6 +322,10 @@
                 <a href="https://bit.ly/MPRAREA2_2025" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-4"><i class="fas fa-file-upload"></i></div>
                     <div class="report-title">Upload MPR 2025</div>
+                </a>
+                <a href="" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon monthly-7"><i class="fas fa-binoculars"></i></div>
+                    <div class="report-title">BMC 2025</div>
                 </a>
             </div>
         </div>
