--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <div class="report-icon monthly-4"><i class="fas fa-file-upload"></i></div>
                     <div class="report-title">Upload MPR 2025</div>
                 </a>
-                <a href="" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1BbOrHnyYiv7Ds18Y-jw9ITfGceeFYc0G/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-7"><i class="fas fa-binoculars"></i></div>
                     <div class="report-title">BMC 2025</div>
                 </a>
