--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <div class="report-icon monthly-4"><i class="fas fa-file-upload"></i></div>
                     <div class="report-title">Upload MPR 2025</div>
                 </a>
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/r/personal/lisliyanah_hokben_co_id/_layouts/15/doc2.aspx?sourcedoc=%7BE9230C86-AB8A-4F2D-B75A-9F398621CBD3%7D&file=Area2_customer%20segment%20(1).xlsx&action=default&mobileredirect=true&wdOrigin=OUTLOOK-METAOS.FILEBROWSER" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EYYMI-mKqy1Pt1qfOYYhy9MBi9W0qZRn4XXdmod9ExDBRw?e=uAKOK3" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-7"><i class="fas fa-binoculars"></i></div>
                     <div class="report-title">Rekap Hasil Survey 2025</div>
                 </a>
