--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
         .monthly-5 { color: #9b59b6; }
         .monthly-6 { color: #f39c12; }
         .monthly-7 { color: #d35400; }
+        .monthly-8 { color: #27ae60; }
         
         /* Project Report Colors */
         .project-1 { color: #9b59b6; }
@@ -326,6 +327,10 @@
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EYYMI-mKqy1Pt1qfOYYhy9MBi9W0qZRn4XXdmod9ExDBRw?e=uAKOK3" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-7"><i class="fas fa-binoculars"></i></div>
                     <div class="report-title">Rekap Hasil Survey 2025</div>
+                </a>
+                 <a href="https://docs.google.com/spreadsheets/d/1b_fOrf-3EkT1-qIIBMis65lCI8-IJkCs/edit?usp=sharing&ouid=104956695162123697923&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon monthly-8"><i class="fas fa-binoculars"></i></div>
+                    <div class="report-title">Area 2 -Report Audit QSC 2025</div>
                 </a>
             </div>
         </div>
