--- a/select_month.html
+++ b/select_month.html
@@ -185,7 +185,7 @@
         </a>
         
         <!-- Oktober -->
-        <a href="oktober.html" class="month-card oktober">
+        <a href="modal_oktober.html" class="month-card oktober">
             <div class="month-icon">
                 <i class="fas fa-cloud-rain"></i>
             </div>
