--- a/monthdoi.html
+++ b/monthdoi.html
@@ -185,7 +185,7 @@
         </a>
         
         <!-- Oktober -->
-        <a href="oktober.html" class="month-card oktober">
+        <a href="https://docs.google.com/spreadsheets/d/1AY_ZiRL3GeOh8osTN_jFgLMMbg6ba3ckMmyuXZFyMvo/edit?usp=sharing" class="month-card oktober">
             <div class="month-icon">
                 <i class="fas fa-cloud-rain"></i>
             </div>
