Add link to PDF tools in daily report section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid">
+                <a href="https://tools.pdf24.org/en/all-tools" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-14"><i class="fas fa-tools"></i></div>
+                    <div class="report-title">Aplikasi Serba Bisa Free</div>
+                </a>
                 <a href="select_month.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS</div>
