--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="report-title">Kontrol PEP harian</div>
                 </a>
                 
-                <a href="http://hws.hokben.net:888/Login.aspx" class="report-card" target="_blank" rel="nofollow">
+                <a href="http://172.18.100.55:888/Login.aspx" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-5"><i class="fas fa-bug"></i></div>
                     <div class="report-title">Pest Control management</div>
                 </a>
