--- a/index.html
+++ b/index.html
@@ -361,6 +361,10 @@
                     <div class="report-icon daily-14"><i class="fas fa-tools"></i></div>
                     <div class="report-title">Aplikasi Serba Bisa Free</div>
                 </a>
+<a href="qrcode.html" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-9"><i class="fas fa-qrcode"></i></div>
+                    <div class="report-title">Generartor QR Code </div>
+                </a>
                 <a href="http://localhost:8082/fixorder/index.php/auth/login" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon app-1"><i class="fas fa-wrench"></i></div>
                     <div class="report-title">Fix order</div>
