--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     <div class="report-title">Aplikasi Serba Bisa Free</div>
                 </a>
 <a href="qrcode.html" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-9"><i class="fas fa-qrcode"></i></div>
+                    <div class="report-icon app-10"><i class="fas fa-barcode"></i></div>
                     <div class="report-title">Generartor QR Code </div>
                 </a>
                 <a href="http://localhost:8082/fixorder/index.php/auth/login" class="report-card" target="_blank" rel="nofollow">
