--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <div class="report-icon daily-14"><i class="fas fa-tools"></i></div>
                     <div class="report-title">Aplikasi Serba Bisa Free</div>
                 </a>
-<a href="qrcode.html" target="_blank" rel="nofollow">
+<a href="qrcode.html" class ="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon app-10"><i class="fas fa-barcode"></i></div>
                     <div class="report-title">Generartor QR Code </div>
                 </a>
