--- a/qrcode.html
+++ b/qrcode.html
@@ -365,14 +365,14 @@
             },
             {
                 id: 'minyak',
-                name: 'QR BINCARD',
+                name: 'QR CODE',
                 categoryText: 'PERHITUNGAN MINYAK',
                 categoryNumber: '',
                 inputId: 'url-minyak'
             },
             {
                 id: 'organoleptik',
-                name: 'QR BINCARD',
+                name: 'QR CODE',
                 categoryText: 'UJI ORGANOLEPTIK',
                 categoryNumber: '',
                 inputId: 'url-organoleptik'
