--- a/select_month.html
+++ b/select_month.html
@@ -193,7 +193,7 @@
         </a>
         
         <!-- November -->
-        <a href="november.html" class="month-card november">
+        <a href="modal_november.html" class="month-card november">
             <div class="month-icon">
                 <i class="fas fa-tree"></i>
             </div>
