Update link for December month card

--- a/select_month.html
+++ b/select_month.html
@@ -201,7 +201,7 @@
         </a>
         
         <!-- Desember -->
-        <a href="desember.html" class="month-card desember">
+        <a href="commingsoon.html" class="month-card desember">
             <div class="month-icon">
                 <i class="fas fa-gift"></i>
             </div>
