--- a/rmo.html
+++ b/rmo.html
@@ -95,7 +95,7 @@ https://github.com/ardacarofficial/links-website is open source project.
            <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1BmlX91mUNaFgZrhc_-3k5inTgPvH_84p0SgeJsLO3nM/edit?usp=sharing" target="_blank" rel="nofollow">
             <button class="main_small_button_item">OKTOBER</button>
           </a>
-          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1ym77WEFlUABh2A82p-idmSZrqviZV_CWwLHsQ02qfuM/edit?usp=sharing" target="_blank" rel="nofollow">
             <button class="main_small_button_item">NOVEMBER</button>
           </a>
 		      <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
