--- a/monthdoi.html
+++ b/monthdoi.html
@@ -193,7 +193,7 @@
         </a>
         
         <!-- November -->
-        <a href="november.html" class="month-card november">
+        <a href="https://docs.google.com/spreadsheets/d/1452YajQzkKgDB0PVrSpLjZpR4AZArmIiZOjVfYITWYE/edit?usp=sharing" class="month-card november">
             <div class="month-icon">
                 <i class="fas fa-tree"></i>
             </div>
@@ -201,7 +201,7 @@
         </a>
         
         <!-- Desember -->
-        <a href="desember.html" class="month-card desember">
+        <a href="commingsoon.html" class="month-card desember">
             <div class="month-icon">
                 <i class="fas fa-gift"></i>
             </div>
