--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                     <div class="report-icon daily-9"><i class="fas fa-hand-holding-usd"></i></div>
                     <div class="report-title">Monitoring sales Reksa</div>
                 </a>
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/EdkfRrjP0HdLnAAf-6JvKHABh_FrehfjRnuMV3c847JMPg?e=nr0g8P" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/EbbQP_v1CalLqmbErn_1l3sBluk8LcZmkBSmyEbgL2ixug?e=Jn3j3i" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
-                    <div class="report-title">DOI Operasional Pusat - Oktober 2025</div>
+                    <div class="report-title">DOI Operasional Pusat - November 2025</div>
                 </a>
                   <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/Ec6pDWpzCtBGjU0hAwGN3m4BLA1qXkIJAwoSI0hTUCVCUA?e=FYdU9o" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
