--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <div class="report-icon project-1"><i class="fas fa-trash-restore"></i></div>
                     <div class="report-title">Rekap Disposal Non Asset</div>
                 </a>
-                <a href="https://docs.google.com/spreadsheets/d/18fDyaJ0zgI44Yd6vXQkPSFhhyBjJsWaq/edit?gid=1878045228#gid=1878045228" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://bit.ly/DISPOSALAREA2" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-4"><i class="fas fa-swatchbook"></i></div>
                     <div class="report-title">Rekap Disposal Asset</div>
                 </a>
