--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         .project-2 { color: #1abc9c; }
         .project-3 { color: #d35400; }
         .project-4 { color: #27ae60; }
+        .project-5 { color: #e74c3c; }
+        .project-6 { color: #2980b9; }
         
         /* App Report Colors */
         .app-1 { color: #3498db; }
@@ -347,9 +349,17 @@
                     <div class="report-icon project-1"><i class="fas fa-trash-restore"></i></div>
                     <div class="report-title">Rekap Disposal Non Asset</div>
                 </a>
-                <a href="https://bit.ly/DISPOSALAREA2" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1O9VbHdgZXXmVs8QCusdykCjofAK1Zfaj/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-4"><i class="fas fa-swatchbook"></i></div>
-                    <div class="report-title">Rekap Disposal Asset</div>
+                    <div class="report-title">Rekap Disposal Asset MTC</div>
+                </a>
+                <a href="https://docs.google.com/spreadsheets/d/1oq37Qm4WkL7XGA_lgczCFBqVAAsO3DZE/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon project-5"><i class="fas fa-keyboard"></i></div>
+                    <div class="report-title">Rekap Disposal Asset ITC</div>
+                </a>
+                <a href="https://docs.google.com/spreadsheets/d/16P-Cm95EP3gfpkEv5gBTgqh3KX8Q-fzz/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon project-6"><i class="fas fa-layer-group"></i></div>
+                    <div class="report-title">Rekap Disposal Asset GA</div>
                 </a>
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/ESgWVm5J2DpNubhEB00i3o0By-IrK_LHmxqAv2FO29DpAg?e=UW1haR&CID=757a2245-ba3c-81f5-28e4-703594c5096a" class="report-card" target="_blank" rel="nofollow">                    
                     <div class="report-icon project-2"><i class="fas fa-tools"></i></div>
