--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 
                 <a href="https://docs.google.com/spreadsheets/d/1ECPGEhqCtcEwhtXadJle2AJqjrTMx-f_AvM18Ph7AEQ/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-3"><i class="fas fa-wallet"></i></div>
-                    <div class="report-title">Monitoring Penjualan Promo</div>
+                    <div class="report-title">Monitoring Peningkatan Average Check November - Desember 2025</div>
                 </a>
 
                 <a href="https://docs.google.com/spreadsheets/d/1X1MVFDsbp-H0hqrF0-N6jYxBpwyY-VXZ/edit?gid=1063202944#gid=1063202944/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
