--- a/index.html
+++ b/index.html
@@ -345,21 +345,13 @@
         <!-- Project Report -->
         <div id="project" class="tab-content">
             <div class="dashboard-grid">
-                <a href="https://docs.google.com/spreadsheets/d/18fDyaJ0zgI44Yd6vXQkPSFhhyBjJsWaq/edit?gid=1878045228#gid=1878045228" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1XK0AW0-ZLv4Aq-uOYH5UlMWUwM2j4e31/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-1"><i class="fas fa-trash-restore"></i></div>
-                    <div class="report-title">Rekap Disposal Non Asset</div>
+                    <div class="report-title">Rekap Disposal Non Asset ( Non Logo )</div>
                 </a>
-                <a href="https://docs.google.com/spreadsheets/d/1O9VbHdgZXXmVs8QCusdykCjofAK1Zfaj/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1DpafG1xJiUd1oQS38tRVGEmHHujDS23b/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-4"><i class="fas fa-swatchbook"></i></div>
-                    <div class="report-title">Rekap Disposal Asset MTC</div>
-                </a>
-                <a href="https://docs.google.com/spreadsheets/d/1oq37Qm4WkL7XGA_lgczCFBqVAAsO3DZE/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon project-5"><i class="fas fa-keyboard"></i></div>
-                    <div class="report-title">Rekap Disposal Asset IT</div>
-                </a>
-                <a href="https://docs.google.com/spreadsheets/d/16P-Cm95EP3gfpkEv5gBTgqh3KX8Q-fzz/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon project-6"><i class="fas fa-layer-group"></i></div>
-                    <div class="report-title">Rekap Disposal Asset GA</div>
+                    <div class="report-title">Rekap Disposal Asset </div>
                 </a>
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/ESgWVm5J2DpNubhEB00i3o0By-IrK_LHmxqAv2FO29DpAg?e=UW1haR&CID=757a2245-ba3c-81f5-28e4-703594c5096a" class="report-card" target="_blank" rel="nofollow">                    
                     <div class="report-icon project-2"><i class="fas fa-tools"></i></div>
