--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="dashboard-grid">
                 <a href="https://docs.google.com/spreadsheets/d/1XK0AW0-ZLv4Aq-uOYH5UlMWUwM2j4e31/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-1"><i class="fas fa-trash-restore"></i></div>
-                    <div class="report-title">Rekap Disposal Non Asset ( Non Logo )</div>
+                    <div class="report-title"> Assessment Disposal Non Asset ( Non Logo )</div>
                 </a>
                 <a href="https://docs.google.com/spreadsheets/d/1DpafG1xJiUd1oQS38tRVGEmHHujDS23b/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-4"><i class="fas fa-swatchbook"></i></div>
