--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
             <div class="dashboard-grid">
                 <a href="https://docs.google.com/spreadsheets/d/1XK0AW0-ZLv4Aq-uOYH5UlMWUwM2j4e31/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-1"><i class="fas fa-trash-restore"></i></div>
-                    <div class="report-title"> Assessment Disposal Non Asset ( Non Logo )</div>
+                    <div class="report-title"> Rekap Disposal Non Asset ( Non Logo )</div>
                 </a>
                 <a href="https://docs.google.com/spreadsheets/d/1DpafG1xJiUd1oQS38tRVGEmHHujDS23b/edit?usp=drivesdk&ouid=105850800277277443809&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon project-4"><i class="fas fa-swatchbook"></i></div>
-                    <div class="report-title">Rekap Disposal Asset </div>
+                    <div class="report-title">Assessment Disposal Asset </div>
                 </a>
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/ESgWVm5J2DpNubhEB00i3o0By-IrK_LHmxqAv2FO29DpAg?e=UW1haR&CID=757a2245-ba3c-81f5-28e4-703594c5096a" class="report-card" target="_blank" rel="nofollow">                    
                     <div class="report-icon project-2"><i class="fas fa-tools"></i></div>
