--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
         
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
-            <div class="dashboard-grid">        
+            <div class="dashboard-grid"> 
+                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
+                    <div class="report-title">Dashboard 2026</div>
+                </a>
                 <a href="select_month.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS</div>
