--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="report-title">Monitoring sales harian regional</div>
                 </a>
                 
-                <a href="commingsoon.html" target="_blank" rel="nofollow">
+                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-3"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">Monitoring Peningkatan Average Check November - Desember 2025</div>
                 </a>
