--- a/rmo.html
+++ b/rmo.html
@@ -98,7 +98,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1ym77WEFlUABh2A82p-idmSZrqviZV_CWwLHsQ02qfuM/edit?usp=sharing" target="_blank" rel="nofollow">
             <button class="main_small_button_item">NOVEMBER</button>
           </a>
-		      <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+		      <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1_eAgsKefONUjVeudNJ5vgDSM3qXr6zUKilsGtgi0_xI/edit?usp=sharing" target="_blank" rel="nofollow">
             <button class="main_small_button_item">DESEMBER</button>
           </a>
         </div>
