--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:f:/g/personal/hardian_theja_hokben_co_id/EjgiKZdErXlPs6LCEj7_T8cBR4foz3Fm_VtxQfeC6Gr3MA?e=B1lIyY" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
-                    <div class="report-title">Dashboard 2026</div>
+                    <div class="report-title">Folder Upload QA Index</div>
                 </a>
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
@@ -224,7 +224,7 @@
                     <div class="report-title">Monitoring sales harian regional</div>
                 </a>
                 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1ECPGEhqCtcEwhtXadJle2AJqjrTMx-f_AvM18Ph7AEQ/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-3"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">Monitoring Peningkatan Average Check November - Desember 2025</div>
                 </a>
@@ -244,7 +244,7 @@
                     <div class="report-title">Pest Control management</div>
                 </a>
                 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1bnSiOKEKI5xgQ5eO8nAz0gSPGmPid8FMr1gdhcJtHbY/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-6"><i class="fas fa-boxes"></i></div>
                     <div class="report-title">Monitoring Day Of Inventory (DOI Area 2)</div>
                 </a>
@@ -263,7 +263,7 @@
                     <div class="report-icon daily-9"><i class="fas fa-hand-holding-usd"></i></div>
                     <div class="report-title">Monitoring sales Reksa</div>
                 </a>
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/ER7DUq_I4HZCiJ1uQg2irQYBCoyh5Rr91phzFKsvcLmmzQ?e=buOO69" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
                     <div class="report-title">DOI Operasional Pusat - Desember 2025</div>
                 </a>
