--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
-                <a href="https://ekabogainti-my.sharepoint.com/:f:/g/personal/hardian_theja_hokben_co_id/EjgiKZdErXlPs6LCEj7_T8cBR4foz3Fm_VtxQfeC6Gr3MA?e=B1lIyY" class="report-card" target="_blank" rel="nofollow">
+                <a href="select_qaindex.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
                     <div class="report-title">Folder Upload QA Index</div>
                 </a>
