Fix HTML tags for daily, weekly, and monthly notes

--- a/select_qaindex.html
+++ b/select_qaindex.html
@@ -109,6 +109,10 @@
     <div class="dashboard-header">
         <h1>Dashboard QA INDEX</h1>
         <p>Pilih CATEGORY untuk melihat detail</p>
+        <p1>GMP,PIE&QMP diisi setiap hari ( Daily)</p1>
+        <p1>PST diisi setiap minggu ( weekly)</p1>
+
+<p1>I5R diis setiap akhir bulan ( monthly)</p1>
     </div>
     
     <div class="months-container">
