Fix formatting and spacing in QA index descriptions

--- a/select_qaindex.html
+++ b/select_qaindex.html
@@ -109,9 +109,9 @@
     <div class="dashboard-header">
         <h1>Dashboard QA INDEX</h1>
         <p>Pilih CATEGORY untuk melihat detail</p>
-        <p1>GMP,PIE&QMP diisi setiap hari ( Daily)</p1>
-        <p2>PST diisi setiap minggu ( weekly)</p2>
-        <p3>I5R diis setiap akhir bulan ( monthly)</p3>
+        <p1>GMP, PIE & QMP diisi setiap hari ( Daily), </p1>
+        <p2>PST diisi setiap minggu ( weekly), </p2>
+        <p3>I5R diisi setiap akhir bulan ( monthly)</p3>
     </div>
     
     <div class="months-container">
