--- a/select_qaindex.html
+++ b/select_qaindex.html
@@ -107,12 +107,8 @@
 </head>
 <body>
     <div class="dashboard-header">
-        <h1>Dashboard QA INDEX</h1>
+        <h1>Dashboard Daily Report QA INDEX</h1>
         <p>Pilih CATEGORY untuk melihat detail</p>
-        <p1>GMP, PIE & QMP diisi setiap hari ( Daily), </p1>
-        <p2>PST diisi setiap minggu ( weekly), </p2>
-        <p3>I5R diisi setiap akhir bulan ( monthly)</p3>
-    </div>
     
     <div class="months-container">
         <!-- Januari -->
