--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
                     <div class="report-title">Folder Upload QA Index</div>
                 </a>
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="select_month.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS</div>
                 </a>
