--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="report-title">Pest Control management</div>
                 </a>
                 
-                <a href="https://docs.google.com/spreadsheets/d/1bnSiOKEKI5xgQ5eO8nAz0gSPGmPid8FMr1gdhcJtHbY/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
+                <a href="monthdoi.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-6"><i class="fas fa-boxes"></i></div>
                     <div class="report-title">Monitoring Day Of Inventory (DOI Area 2)</div>
                 </a>
