--- a/select_qaindex.html
+++ b/select_qaindex.html
@@ -109,6 +109,7 @@
     <div class="dashboard-header">
         <h1>Dashboard Daily Report QA INDEX</h1>
         <p>Pilih CATEGORY untuk melihat detail</p>
+         <p>NEW FORM</p>
     
     <div class="months-container">
         <!-- Januari -->
