--- a/index.html
+++ b/index.html
@@ -206,14 +206,15 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
-                <!--<a href="select_qaindex.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="select_qaindex.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
+                    <div class="report-title">QA Index New Form</div>
+                </a>
+               <a href="select_qaindexformlama.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
                     <div class="report-title">Folder Upload QA Index ( Lama )</div>
                 </a>
-                <a href="select_qaindex.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
-                    <div class="report-title">QA Index New</div>
-                </a>-->
+                
                 <a href="select_month.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS</div>
