--- a/index.html
+++ b/index.html
@@ -206,15 +206,14 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
+                <a href="dashoboard2026.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
+                    <div class="report-title">Dashboard 2026</div>
+                </a>
                 <a href="select_qaindex.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
                     <div class="report-title">QA Index New Form</div>
-                </a>
-                 <!--<a href="select_qaindexformlama.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
-                    <div class="report-title">Folder Upload QA Index ( Lama )</div>
-                </a>-->
-                
+                </a>                
                 <a href="select_month.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS</div>
@@ -233,12 +232,6 @@
                     <div class="report-icon daily-3"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">Monitoring Peningkatan Average Check November - Desember 2025</div>
                 </a>
-
-                <!--<a href="https://docs.google.com/spreadsheets/d/1X1MVFDsbp-H0hqrF0-N6jYxBpwyY-VXZ/edit?gid=1063202944#gid=1063202944/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-14"><i class="fas fa-users"></i></div>
-                    <div class="report-title">Data Sistem Kerja Karyawan Area 2</div>
-                </a>-->
-
                 <a href="pep.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-4"><i class="fas fa-user-shield"></i></div>
                     <div class="report-title">Kontrol PEP harian</div>
