--- a/dashoboard2026.html
+++ b/dashoboard2026.html
@@ -319,7 +319,7 @@
                     <div class="report-icon app-10"><i class="fas fa-barcode"></i></div>
                     <div class="report-title">Generartor QR Code </div>
                 </a>
-		<!--<a href="grab.html" class="report-card" target="_blank" rel="nofollow">
+				<a href="grab.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-7"><i class="fas fa-motorcycle"></i></div>
                     <div class="report-title">Check Menu Grab</div>
                 </a>
