--- a/dashoboard2026.html
+++ b/dashoboard2026.html
@@ -210,11 +210,11 @@
                     <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
                     <div class="report-title">QA Index 2026</div>
                 </a>                
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="select_store_modal2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS 2026</div>
                 </a>
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow"">
+                <a href="select_store_sales2026.html" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian 2026 - Area 2</div>
                 </a>
@@ -239,12 +239,12 @@
                     <div class="report-title">Pest Control management</div>
                 </a>
                 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="month_doi_2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-6"><i class="fas fa-boxes"></i></div>
                     <div class="report-title">Monitoring Day Of Inventory 2026 (DOI Area 2)</div>
                 </a>
                 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="month_doi_2026_pusat.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
                     <div class="report-title">DOI Operasional Pusat - Desember 2026</div>
                 </a>
