--- a/dashoboard2026.html
+++ b/dashoboard2026.html
@@ -206,7 +206,7 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="month_qaindex_2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
                     <div class="report-title">QA Index 2026</div>
                 </a>                
