--- a/dashoboard2026.html
+++ b/dashoboard2026.html
@@ -224,7 +224,7 @@
                     <div class="report-title">Monitoring sales harian regional 2026</div>
                 </a>
                 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="month_promo_2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-3"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">Monitoring Tactical Promo 2026</div>
                 </a>
