Update dashboard title for 2026

--- a/month_qaindex_2026.html
+++ b/month_qaindex_2026.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="dashboard-header">
-        <h1>Dashboard Daily Report QA INDEX</h1>
+        <h1>Dashboard Daily Report QA INDEX 2026</h1>
         <p>Pilih CATEGORY untuk melihat detail</p>
          <p>NEW FORM</p>
     
