--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         .daily-10 { color: #2980b9; }
         .daily-11 { color: #9b59b6; }
         .daily-12 { color: #27ae60; }
-        .daily-13 { color: #e74c3c; }
+        .daily-13 { color: #2F4F4F; }
         .daily-14 { color: #3498db; }
         .daily-15 { color: #9b59b6; }
         
@@ -207,7 +207,7 @@
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
                 <a href="dashoboard2025.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-15"><i class="fas fa-dashboard"></i></div>
+                    <div class="report-icon daily-13"><i class="fas fa-dashboard"></i></div>
                     <div class="report-title">Dashboard 2025</div>
                 </a>
                 <a href="month_qaindex_2026.html" class="report-card" target="_blank" rel="nofollow">
