--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
                     <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
                     <div class="report-title">QA Index 2026</div>
                 </a>                
-                <a href="select_store_modal2026.html" class="report-card" target="_blank" rel="nofollow">
+                <!--<a href="select_store_modal2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS 2026</div>
-                </a>
+                </a>-->
                 <a href="select_store_sales2026.html" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian 2026 - Area 2</div>
