--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
                 <!--<a href="select_store_modal2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS 2026</div>
-                </a>-->
+                </a>
                 <a href="select_store_sales2026.html" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian 2026 - Area 2</div>
                 </a>
                 
-                <!--<a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-2"><i class="fas fa-map-marked-alt"></i></div>
                     <div class="report-title">Monitoring sales harian regional 2026</div>
                 </a>
