--- a/select_store_modal2026.html
+++ b/select_store_modal2026.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Modal TMS 2026</title>
+    <title>Dashboard Modal Store 2026</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -154,7 +154,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>📊 Dashboard Modal TMS 2026</h1>
+        <h1>📊 Dashboard Laporan Modal Store 2026</h1>
           <p>Pilih Store untuk mengisi Laporan</p>
     </div>
 
@@ -172,31 +172,31 @@
         </div>
 
         <!-- Atrium - Ikon mal modern -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1FJC6QhyOHRVjURuLB4mh0d3JOMX-WXhlXr7izgTmJCQ/edit?usp=sharing', '_blank')">
             <i class="fas fa-store store-icon"></i>
             <div class="store-name">Atrium</div>
         </div>
 
         <!-- Mangga Dua Mall - Ikon elektronik/bargain -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1A_a7DgRfH6y_P1THHJtO_QAy8x_pEsnQwiMmdpRlVY0/edit?usp=sharing', '_blank')">
             <i class="fas fa-tags store-icon"></i>
             <div class="store-name">Mangga Dua</div>
         </div>
 
         <!-- PRJ - Ikon festival/pameran -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1UmD_Bj_SZBOWg-IdaDgJHlI0vfcRlXhm1-rV1nEBQBY/edit?usp=sharing', '_blank')">
             <i class="fas fa-flag-checkered store-icon"></i>
             <div class="store-name">PRJ</div>
         </div>
 
         <!-- Cempaka Mas - Ikon mall dengan pohon -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1xBsPoXVDtqvoJSmLr05Sqz9ub4baBfDG7A0gqkFtKs0/edit?usp=sharing', '_blank')">
             <i class="fas fa-tree store-icon"></i>
             <div class="store-name">Cempaka Mas</div>
         </div>
 
         <!-- Roxy Mas - Ikon fashion/shopping -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1UOuFRun5WRAf3Wl86W6g7deFlehalG7C5lkey1bYpXA/edit?usp=sharing', '_blank')">
             <i class="fas fa-tshirt store-icon"></i>
             <div class="store-name">Roxy Mas</div>
         </div>
@@ -220,55 +220,55 @@
         </div>
 
         <!-- FX Sudirman - Ikon gedung perkantoran modern -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1pgSIKYJBzB_HA_liyJmcxmKCU7AsmsiD-no1O2DfqzA/edit?usp=sharing', '_blank')">
             <i class="fas fa-building store-icon"></i>
             <div class="store-name">FX Sudirman</div>
         </div>
 
         <!-- Plaza Senayan - Ikon mall mewah -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1bSIefIRlX0xgFAjtt_FVG2waVyVx65hlvtSgGxw280Q/edit?usp=sharing', '_blank')">
             <i class="fas fa-gem store-icon"></i>
             <div class="store-name">Plaza Senayan</div>
         </div>
 
         <!-- Grand Indonesia - Ikon mall besar/luxury -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1WruEZ0Ynbbk4gP2VJJ6YLovD_5--2eG8c3_uT3tM-bU/edit?usp=sharing', '_blank')">
             <i class="fas fa-crown store-icon"></i>
             <div class="store-name">Grand Indonesia</div>
         </div>
 
         <!-- Green Pramuka Square - Ikon mall hijau/ramah lingkungan -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1Hv79HwVZDdWk7l8NQC2bU5AhHHgJv0ji1jNrQ4oIMJc/edit?usp=sharing', '_blank')">
             <i class="fas fa-leaf store-icon"></i>
             <div class="store-name">Green Pramuka</div>
         </div>
 
         <!-- Cideng - Ikon area perkotaan -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1t0hYrDDXVSYmLamIyCBABrU4lszFnoiO9fYQ_gX2J0M/edit?usp=sharing', '_blank')">
             <i class="fas fa-map-marker-alt store-icon"></i>
             <div class="store-name">Cideng</div>
         </div>
 
         <!-- RS St Carolus - Ikon rumah sakit -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1cPC8yGOP-sI6LluIc3W7iWgP6UjlOVXtFrKG1QYz57k/edit?usp=sharing', '_blank')">
             <i class="fas fa-hospital-alt store-icon"></i>
             <div class="store-name">RS St Carolus</div>
         </div>
 
         <!-- Transmart Cempaka - Ikon supermarket -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1yLFahYRNrE6we1nNNivxeOtKuEaAASKWIFaxgYg-OO8/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-bag store-icon"></i>
             <div class="store-name">Transmart</div>
         </div>
 
         <!-- Ruko Pecenongan - Ikon ruko tua -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1_hZUkDBZkAbVKX01NVdnUF8L79mJ_2LQVSJtGg36WqM/edit?usp=sharing', '_blank')">
             <i class="fas fa-warehouse store-icon"></i>
             <div class="store-name">Ruko Pecenongan</div>
         </div>
 
         <!-- Senayan City - Ikon mall high-end -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/12cSYyPY6UpfLxQKVRXTOXWNyZDFQV3sRLPw_RwOrpEQ/edit?usp=sharing', '_blank')">
             <i class="fas fa-star store-icon"></i>
             <div class="store-name">Senayan City</div>
         </div>
