--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS 2026</div>
                 </a>
+				<a href="https://ekabogainti-my.sharepoint.com/:f:/g/personal/arinto_purnomo_hokben_co_id/IgDdiB4V4nxKQbuhWCuZxSNAAfxhhGfLK_qLgjwB7ylLCsE?e=wAUfVg" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-13"><i class="fas fa-upload"></i></div>
+                    <div class="report-title">Upload Laporan Serah Terima Modal Store 2026</div>
+                </a>
                 <a href="select_store_sales2026.html" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian 2026 - Area 2</div>
