Update Gajah Mada store link to Google Sheets

--- a/select_store_modal2026.html
+++ b/select_store_modal2026.html
@@ -214,7 +214,7 @@
         </div>
 
         <!-- Gajah Mada Plaza - Ikon plaza tua/klasik -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1owJJWvy61GqtA37QY_hkIsEzlDAwrNrE4rAVDICn9aQ/edit?usp=sharing', '_blank')">
             <i class="fas fa-monument store-icon"></i>
             <div class="store-name">Gajah Mada</div>
         </div>
