--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 
                 <a href="month_doi_2026_pusat.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
-                    <div class="report-title">DOI Operasional Pusat - Desember 2026</div>
+                    <div class="report-title">DOI / LPB Operasional 2026</div>
                 </a>
                   
             </div>
