--- a/month_doi_2026_pusat.html
+++ b/month_doi_2026_pusat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Day Of Inventory 2026 ( DOI )</title>
+    <title>DOI / LPB Ops 2026</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="dashboard-header">
-        <h1>DOI Ops Pusat 2026 ( DOI )</h1>
+        <h1>DOI / LPB Ops 2026</h1>
         <p>Pilih bulan untuk melihat detail</p>
     </div>
     
