--- a/month_doi_2026.html
+++ b/month_doi_2026.html
@@ -113,7 +113,7 @@
     
     <div class="months-container">
         <!-- Januari -->
-        <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/arinto_purnomo_hokben_co_id/IQC3gpWul3GKQYAEEIrbpspVAcpLhIgmuweAgC_Rr4eJV0E?e=6x7WuI" class="month-card januari">
+        <a href="https://docs.google.com/spreadsheets/d/1Fjie_xvKfvQRMZeo6t56ESVKwDL_Pr75P0dAIU3Udus/edit?usp=sharing" class="month-card januari">
             <div class="month-icon">
                 <i class="fas fa-snowflake"></i>
             </div>
@@ -121,7 +121,7 @@
         </a>
         
         <!-- Februari -->
-        <a href="commingsoon.html" class="month-card februari">
+        <a href="https://docs.google.com/spreadsheets/d/15F5uw2KQMptKBr6Ip_KRrqU5oNS23eLGYwZ6QICnMEA/edit?usp=sharing" class="month-card februari">
             <div class="month-icon">
                 <i class="fas fa-heart"></i>
             </div>
